# rpi4-dpgs

./: .gitignore  README.md  build.sh  run.sh
client/dpgs-client/: CMakeLists.txt  TriangleOverlay.h  cctvstreamthread.cpp  cctvstreamthread.h  logindialog.cpp  logindialog.h  logindialog.ui  loginworker.cpp  loginworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdatathread.cpp  mapdatathread.h  page1st.cpp  page1st.h  page1st.ui  page2nd.cpp  page2nd.h  page2nd.ui  parkingmap.cpp  parkingmap.h  parkingmap.ui  parkingmapwidget.cpp  parkingmapwidget.h  parkingmapwidget.ui  parkingmapwidgetb2f.cpp  parkingmapwidgetb2f.h  parkingmapwidgetb2f.ui  parkingmapwidgetb3f.cpp  parkingmapwidgetb3f.h  parkingmapwidgetb3f.ui  resource.qrc  slotdata.h  slotinfo.h  tls_helper.c  tls_helper.h
client/dpgs-client/certs/: Final.crt  server_test.crt
server/dpgs-cam/: Makefile
server/dpgs-cam/core/: cam_thr_supv.cpp  dpgs_cam.cpp  main.cpp  srv_net.cpp
server/dpgs-cam/include/: cam_stream.h  cam_thr_supv.h  dpgs_cam.h  srv_net.h  srv_stream.h  str_frame_buffer.h  vp_engine.h
server/dpgs-cam/stream/: cam_stream.cpp  srv_stream.cpp
server/dpgs-cam/vp_engine/: vp_engine.cpp
server/dpgs-dev/rgbmatrix/: Makefile  receiver.cpp  rgbmatrix.c
server/dpgs-server/: Makefile  Makefile2  client  main  main.cpp  san.conf  server.key  server2.crt  server2.key  skeleton.cpp  temp.cpp
server/dpgs-server/ai_engine/: Makefile  ai_engine.cpp  ai_engine_internal.h  classifier.cpp  classifier.h  detector.cpp  frame_buffer.cpp  frame_buffer.h  (+3 more)
server/dpgs-server2/: Makefile
(+152 files in other folders)
